Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-134046

[Android] The audiorecorder example app is crashing when trying to record anything with disallowed permissions

XMLWordPrintable

    • Android
    • 1676524ed (dev), a836b9289 (6.9), a0c28c86d (6.8), 788d6f1b1 (tqtc/lts-6.5)
    • Multimedia, weeks 9-10, Multimedia, weeks 11-12

      MacOS 15.3.1

      Qt Creator 15.0.1

      Qt 6.9.0b3

       

      Device: Samsung Galaxy S22 13.0, Pixel 3a 12.0

      Steps to reproduce:

      1. Run audiorecorder on android device.
      2. Select 'Don't allow' on permission prompt
      3. Click 'Record button'.

      Expected: The app should not crash but rather inform about required permission as it's done for quick recorder example.

      Actual: The app crashes.

      Reproducibility:  100%

       

      F/DEBUG   : Build fingerprint: 'samsung/r0sxeea/r0s:14/UP1A.231005.007/S901BXXSBEXG8:user/release-keys'
      F/DEBUG   : Revision: '28'
      F/DEBUG   : Cmdline: org.qtproject.example.audiorecorder
      F/DEBUG   : pid: 8236, tid: 8304, name: qtMainLoopThrea  >>> org.qtproject.example.audiorecorder <<<
      F/DEBUG   : tagged_addr_ctrl: 0000000000000001 (PR_TAGGED_ADDR_ENABLE)
      F/DEBUG   : pac_enabled_keys: 000000000000000f (PR_PAC_APIAKEY, PR_PAC_APIBKEY, PR_PAC_APDAKEY, PR_PAC_APDBKEY)
      F/DEBUG   : signal 11 (SIGSEGV), code 1 (SEGV_MAPERR), fault addr 0x0000000000000010
      F/DEBUG   : Cause: null pointer dereference
      F/DEBUG   :       #00 pc 00000000000e34a0  /data/app/~~uFUUROAH_Wo_x4N2zPZJkw==/org.qtproject.example.audiorecorder-FRUN5uVv9B8-ksU6VTWBIA==/base.apk!libQt6Multimedia_arm64-v8a.so (offset 0x1264000) (QMediaRecorder::recorderState() const+0) (BuildId: c0e6bc4b1037a6c107426ee2935f3f72d622b4bb)
      F/DEBUG   :       #01 pc 000000000002aff0  /data/app/~~uFUUROAH_Wo_x4N2zPZJkw==/org.qtproject.example.audiorecorder-FRUN5uVv9B8-ksU6VTWBIA==/base.apk (offset 0x2ad0000) (AudioRecorder::toggleRecord()+48) (BuildId: 1d063051c5b6865c4c150d2b37b338a1e20e0394)
      F/DEBUG   :       #02 pc 0000000000023cdc  /data/app/~~uFUUROAH_Wo_x4N2zPZJkw==/org.qtproject.example.audiorecorder-FRUN5uVv9B8-ksU6VTWBIA==/base.apk (offset 0x2ad0000) (BuildId: 1d063051c5b6865c4c150d2b37b338a1e20e0394)
      F/DEBUG   :       #03 pc 00000000003a3170  /data/app/~~uFUUROAH_Wo_x4N2zPZJkw==/org.qtproject.example.audiorecorder-FRUN5uVv9B8-ksU6VTWBIA==/base.apk!libQt6Core_arm64-v8a.so (offset 0x4f4000) (BuildId: 97a9b07af7b22fe47ecfa16767ca916299fc1c74)
      F/DEBUG   :       #04 pc 000000000034e95c  /data/app/~~uFUUROAH_Wo_x4N2zPZJkw==/org.qtproject.example.audiorecorder-FRUN5uVv9B8-ksU6VTWBIA==/base.apk!libQt6Widgets_arm64-v8a.so (offset 0x2410000) (BuildId: a8f3c8aa314caf2e63778709d2748d54dc78af20)
      F/DEBUG   :       #05 pc 0000000000421a9c  /data/app/~~uFUUROAH_Wo_x4N2zPZJkw==/org.qtproject.example.audiorecorder-FRUN5uVv9B8-ksU6VTWBIA==/base.apk!libQt6Widgets_arm64-v8a.so (offset 0x2410000) (QAbstractButton::clicked(bool)+32) (BuildId: a8f3c8aa314caf2e63778709d2748d54dc78af20)
      F/DEBUG   :       #06 pc 0000000000421a00  /data/app/~~uFUUROAH_Wo_x4N2zPZJkw==/org.qtproject.example.audiorecorder-FRUN5uVv9B8-ksU6VTWBIA==/base.apk!libQt6Widgets_arm64-v8a.so (offset 0x2410000) (BuildId: a8f3c8aa314caf2e63778709d2748d54dc78af20)
      F/DEBUG   :       #07 pc 00000000004218d0  /data/app/~~uFUUROAH_Wo_x4N2zPZJkw==/org.qtproject.example.audiorecorder-FRUN5uVv9B8-ksU6VTWBIA==/base.apk!libQt6Widgets_arm64-v8a.so (offset 0x2410000) (BuildId: a8f3c8aa314caf2e63778709d2748d54dc78af20)
      F/DEBUG   :       #08 pc 00000000004223ec  /data/app/~~uFUUROAH_Wo_x4N2zPZJkw==/org.qtproject.example.audiorecorder-FRUN5uVv9B8-ksU6VTWBIA==/base.apk!libQt6Widgets_arm64-v8a.so (offset 0x2410000) (QAbstractButton::mouseReleaseEvent(QMouseEvent*)+104) (BuildId: a8f3c8aa314caf2e63778709d2748d54dc78af20)
      F/DEBUG   :       #09 pc 0000000000393a7c  /data/app/~~uFUUROAH_Wo_x4N2zPZJkw==/org.qtproject.example.audiorecorder-FRUN5uVv9B8-ksU6VTWBIA==/base.apk!libQt6Widgets_arm64-v8a.so (offset 0x2410000) (QWidget::event(QEvent*)+2460) (BuildId: a8f3c8aa314caf2e63778709d2748d54dc78af20)
      F/DEBUG   :       #10 pc 000000000035383c  /data/app/~~uFUUROAH_Wo_x4N2zPZJkw==/org.qtproject.example.audiorecorder-FRUN5uVv9B8-ksU6VTWBIA==/base.apk!libQt6Widgets_arm64-v8a.so (offset 0x2410000) (QApplicationPrivate::notify_helper(QObject*, QEvent*)+236) (BuildId: a8f3c8aa314caf2e63778709d2748d54dc78af20)
      F/DEBUG   :       #11 pc 00000000003551ec  /data/app/~~uFUUROAH_Wo_x4N2zPZJkw==/org.qtproject.example.audiorecorder-FRUN5uVv9B8-ksU6VTWBIA==/base.apk!libQt6Widgets_arm64-v8a.so (offset 0x2410000) (QApplication::notify(QObject*, QEvent*)+3900) (BuildId: a8f3c8aa314caf2e63778709d2748d54dc78af20)
      F/DEBUG   :       #12 pc 0000000000369da0  /data/app/~~uFUUROAH_Wo_x4N2zPZJkw==/org.qtproject.example.audiorecorder-FRUN5uVv9B8-ksU6VTWBIA==/base.apk!libQt6Core_arm64-v8a.so (offset 0x4f4000) (QCoreApplication::notifyInternal2(QObject*, QEvent*)+160) (BuildId: 97a9b07af7b22fe47ecfa16767ca916299fc1c74)
      F/DEBUG   :       #13 pc 0000000000353d4c  /data/app/~~uFUUROAH_Wo_x4N2zPZJkw==/org.qtproject.example.audiorecorder-FRUN5uVv9B8-ksU6VTWBIA==/base.apk!libQt6Widgets_arm64-v8a.so (offset 0x2410000) (QApplicationPrivate::sendMouseEvent(QWidget*, QMouseEvent*, QWidget*, QWidget*, QWidget**, QPointer<QWidget>&, bool, bool)+680) (BuildId: a8f3c8aa314caf2e63778709d2748d54dc78af20)
      F/DEBUG   :       #14 pc 00000000003a7db8  /data/app/~~uFUUROAH_Wo_x4N2zPZJkw==/org.qtproject.example.audiorecorder-FRUN5uVv9B8-ksU6VTWBIA==/base.apk!libQt6Widgets_arm64-v8a.so (offset 0x2410000) (BuildId: a8f3c8aa314caf2e63778709d2748d54dc78af20)
      F/DEBUG   :       #15 pc 00000000003a72ec  /data/app/~~uFUUROAH_Wo_x4N2zPZJkw==/org.qtproject.example.audiorecorder-FRUN5uVv9B8-ksU6VTWBIA==/base.apk!libQt6Widgets_arm64-v8a.so (offset 0x2410000) (BuildId: a8f3c8aa314caf2e63778709d2748d54dc78af20)
      F/DEBUG   :       #16 pc 000000000035383c  /data/app/~~uFUUROAH_Wo_x4N2zPZJkw==/org.qtproject.example.audiorecorder-FRUN5uVv9B8-ksU6VTWBIA==/base.apk!libQt6Widgets_arm64-v8a.so (offset 0x2410000) (QApplicationPrivate::notify_helper(QObject*, QEvent*)+236) (BuildId: a8f3c8aa314caf2e63778709d2748d54dc78af20)
      F/DEBUG   :       #17 pc 00000000003544b8  /data/app/~~uFUUROAH_Wo_x4N2zPZJkw==/org.qtproject.example.audiorecorder-FRUN5uVv9B8-ksU6VTWBIA==/base.apk!libQt6Widgets_arm64-v8a.so (offset 0x2410000) (QApplication::notify(QObject*, QEvent*)+520) (BuildId: a8f3c8aa314caf2e63778709d2748d54dc78af20)
      F/DEBUG   :       #18 pc 0000000000369da0  /data/app/~~uFUUROAH_Wo_x4N2zPZJkw==/org.qtproject.example.audiorecorder-FRUN5uVv9B8-ksU6VTWBIA==/base.apk!libQt6Core_arm64-v8a.so (offset 0x4f4000) (QCoreApplication::notifyInternal2(QObject*, QEvent*)+160) (BuildId: 97a9b07af7b22fe47ecfa16767ca916299fc1c74)
      F/DEBUG   :       #19 pc 0000000000375c0c  /data/app/~~uFUUROAH_Wo_x4N2zPZJkw==/org.qtproject.example.audiorecorder-FRUN5uVv9B8-ksU6VTWBIA==/base.apk!libQt6Gui_arm64-v8a.so (offset 0xad0000) (QGuiApplicationPrivate::processMouseEvent(QWindowSystemInterfacePrivate::MouseEvent*)+1308) (BuildId: 252e9c29422408f3f63c63f70cc6afc6b9dfdd44)
      F/DEBUG   :       #20 pc 0000000000376df8  /data/app/~~uFUUROAH_Wo_x4N2zPZJkw==/org.qtproject.example.audiorecorder-FRUN5uVv9B8-ksU6VTWBIA==/base.apk!libQt6Gui_arm64-v8a.so (offset 0xad0000) (QGuiApplicationPrivate::processTouchEvent(QWindowSystemInterfacePrivate::TouchEvent*)+2836) (BuildId: 252e9c29422408f3f63c63f70cc6afc6b9dfdd44)
      F/DEBUG   :       #21 pc 00000000003c51a4  /data/app/~~uFUUROAH_Wo_x4N2zPZJkw==/org.qtproject.example.audiorecorder-FRUN5uVv9B8-ksU6VTWBIA==/base.apk!libQt6Gui_arm64-v8a.so (offset 0xad0000) (QWindowSystemInterface::sendWindowSystemEvents(QFlags<QEventLoop::ProcessEventsFlag>)+120) (BuildId: 252e9c29422408f3f63c63f70cc6afc6b9dfdd44)
      F/DEBUG   :       #22 pc 0000000000655500  /data/app/~~uFUUROAH_Wo_x4N2zPZJkw==/org.qtproject.example.audiorecorder-FRUN5uVv9B8-ksU6VTWBIA==/base.apk!libQt6Gui_arm64-v8a.so (offset 0xad0000) (QUnixEventDispatcherQPA::processEvents(QFlags<QEventLoop::ProcessEventsFlag>)+32) (BuildId: 252e9c29422408f3f63c63f70cc6afc6b9dfdd44)
      F/DEBUG   :       #23 pc 000000000006b34c  /data/app/~~uFUUROAH_Wo_x4N2zPZJkw==/org.qtproject.example.audiorecorder-FRUN5uVv9B8-ksU6VTWBIA==/base.apk (offset 0x3e38000) (BuildId: 055250d8c38b76767ffa956c99e3335fe32ead5e)
      F/DEBUG   :       #24 pc 0000000000371a14  /data/app/~~uFUUROAH_Wo_x4N2zPZJkw==/org.qtproject.example.audiorecorder-FRUN5uVv9B8-ksU6VTWBIA==/base.apk!libQt6Core_arm64-v8a.so (offset 0x4f4000) (QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>)+336) (BuildId: 97a9b07af7b22fe47ecfa16767ca916299fc1c74)
      F/DEBUG   :       #25 pc 000000000036a32c  /data/app/~~uFUUROAH_Wo_x4N2zPZJkw==/org.qtproject.example.audiorecorder-FRUN5uVv9B8-ksU6VTWBIA==/base.apk!libQt6Core_arm64-v8a.so (offset 0x4f4000) (QCoreApplication::exec()+136) (BuildId: 97a9b07af7b22fe47ecfa16767ca916299fc1c74)
      F/DEBUG   :       #26 pc 0000000000038960  /data/app/~~uFUUROAH_Wo_x4N2zPZJkw==/org.qtproject.example.audiorecorder-FRUN5uVv9B8-ksU6VTWBIA==/base.apk (offset 0x2ad0000) (main+88) (BuildId: 1d063051c5b6865c4c150d2b37b338a1e20e0394)
      F/DEBUG   :       #27 pc 0000000000061e94  /data/app/~~uFUUROAH_Wo_x4N2zPZJkw==/org.qtproject.example.audiorecorder-FRUN5uVv9B8-ksU6VTWBIA==/base.apk (offset 0x3e38000) (BuildId: 055250d8c38b76767ffa956c99e3335fe32ead5e)
      F/DEBUG   :       #28 pc 000000000037ef70  /apex/com.android.art/lib64/libart.so (art_quick_generic_jni_trampoline+144) (BuildId: 629e0ffca501d809c29dbbeef2f512d3)
      F/DEBUG   :       #29 pc 0000000000368a40  /apex/com.android.art/lib64/libart.so (art_quick_invoke_static_stub+640) (BuildId: 629e0ffca501d809c29dbbeef2f512d3)
      F/DEBUG   :       #30 pc 0000000000361e3c  /apex/com.android.art/lib64/libart.so (bool art::interpreter::DoCall<false>(art::ArtMethod*, art::Thread*, art::ShadowFrame&, art::Instruction const*, unsigned short, bool, art::JValue*)+2048) (BuildId: 629e0ffca501d809c29dbbeef2f512d3)
      F/DEBUG   :       #31 pc 000000000076f7a4  /apex/com.android.art/lib64/libart.so (void art::interpreter::ExecuteSwitchImplCpp<false>(art::interpreter::SwitchImplContext*)+12208) (BuildId: 629e0ffca501d809c29dbbeef2f512d3)
      F/DEBUG   :       #32 pc 00000000003815d8  /apex/com.android.art/lib64/libart.so (ExecuteSwitchImplAsm+8) (BuildId: 629e0ffca501d809c29dbbeef2f512d3)
      F/DEBUG   :       #33 pc 0000000000203404  /data/app/~~uFUUROAH_Wo_x4N2zPZJkw==/org.qtproject.example.audiorecorder-FRUN5uVv9B8-ksU6VTWBIA==/base.apk (org.qtproject.qt.android.QtNative$$ExternalSyntheticLambda4.run+0)
      F/DEBUG   :       #34 pc 0000000000354230  /apex/com.android.art/lib64/libart.so (art::interpreter::Execute(art::Thread*, art::CodeItemDataAccessor const&, art::ShadowFrame&, art::JValue, bool, bool) (.__uniq.112435418011751916792819755956732575238.llvm.16344227474899595276)+428) (BuildId: 629e0ffca501d809c29dbbeef2f512d3)
      F/DEBUG   :       #35 pc 0000000000362658  /apex/com.android.art/lib64/libart.so (bool art::interpreter::DoCall<false>(art::ArtMethod*, art::Thread*, art::ShadowFrame&, art::Instruction const*, unsigned short, bool, art::JValue*)+4124) (BuildId: 629e0ffca501d809c29dbbeef2f512d3)
      F/DEBUG   :       #36 pc 000000000076f7a4  /apex/com.android.art/lib64/libart.so (void art::interpreter::ExecuteSwitchImplCpp<false>(art::interpreter::SwitchImplContext*)+12208) (BuildId: 629e0ffca501d809c29dbbeef2f512d3)
      F/DEBUG   :       #37 pc 00000000003815d8  /apex/com.android.art/lib64/libart.so (ExecuteSwitchImplAsm+8) (BuildId: 629e0ffca501d809c29dbbeef2f512d3)
      F/DEBUG   :       #38 pc 0000000000205158  /data/app/~~uFUUROAH_Wo_x4N2zPZJkw==/org.qtproject.example.audiorecorder-FRUN5uVv9B8-ksU6VTWBIA==/base.apk (org.qtproject.qt.android.QtThread$1.run+0)
      F/DEBUG   :       #39 pc 00000000003535bc  /apex/com.android.art/lib64/libart.so (artQuickToInterpreterBridge+1932) (BuildId: 629e0ffca501d809c29dbbeef2f512d3)
      F/DEBUG   :       #40 pc 000000000037f098  /apex/com.android.art/lib64/libart.so (art_quick_to_interpreter_bridge+88) (BuildId: 629e0ffca501d809c29dbbeef2f512d3)
      F/DEBUG   :       #41 pc 0000000002004988  /memfd:jit-cache (deleted) (offset 0x2000000) (java.lang.Thread.run+136)
      F/DEBUG   :       #42 pc 0000000000368774  /apex/com.android.art/lib64/libart.so (art_quick_invoke_stub+612) (BuildId: 629e0ffca501d809c29dbbeef2f512d3)
      F/DEBUG   :       #43 pc 0000000000353f04  /apex/com.android.art/lib64/libart.so (art::ArtMethod::Invoke(art::Thread*, unsigned int*, unsigned int, art::JValue*, char const*)+132) (BuildId: 629e0ffca501d809c29dbbeef2f512d3)
      F/DEBUG   :       #44 pc 0000000000947a48  /apex/com.android.art/lib64/libart.so (_ZN3art9ArtMethod14InvokeInstanceILc86ETpTncJEEENS_6detail12ShortyTraitsIXT_EE4TypeEPNS_6ThreadENS_6ObjPtrINS_6mirror6ObjectEEEDpNS3_IXT0_EE4TypeE+60) (BuildId: 629e0ffca501d809c29dbbeef2f512d3)
      F/DEBUG   :       #45 pc 000000000061afcc  /apex/com.android.art/lib64/libart.so (art::Thread::CreateCallback(void*)+1344) (BuildId: 629e0ffca501d809c29dbbeef2f512d3)
      F/DEBUG   :       #46 pc 000000000061aa7c  /apex/com.android.art/lib64/libart.so (art::Thread::CreateCallbackWithUffdGc(void*)+8) (BuildId: 629e0ffca501d809c29dbbeef2f512d3)
      F/DEBUG   :       #47 pc 00000000000be8c8  /apex/com.android.runtime/lib64/bionic/libc.so (__pthread_start(void*)+208) (BuildId: 7b2771e16ba279a5186fe9e8c815e964)
      F/DEBUG   :       #48 pc 000000000005b3b0  /apex/com.android.runtime/lib64/bionic/libc.so (__start_thread+64) (BuildId: 7b2771e16ba279a5186fe9e8c815e964) 

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            bartlomiejmoskal Bartlomiej Moskal
            lkos Łukasz Kosiorowski
            Votes:
            1 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes