AudioRecorder Example: Fix crash on permissions denied

The AudioRecorder example could crash because QMediaRecorder is only
created when microphone permissions are granted. However, the code
assumes that m_audioRecorder is always set, potentially leading to a
null pointer dereference.

This commit adds checks for m_audioRecorder and displays a message
in the status bar when permissions are missing.

Fixes: QTBUG-134046
Change-Id: I184f2b795825d2888b504ad03c0c9384e588518b
Reviewed-by: Artem Dyomin <artem.dyomin@qt.io>
(cherry picked from commit 1676524eddd4a017b1f1099959002b74e7469ff1)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>
(cherry picked from commit a836b9289a9f9e7df79673b5290bc71f02baa2d4)
(cherry picked from commit a0c28c86d37d8a2ee7b1cbef579151ea23656fa5)