examples/multimedia/audiorecorder/audiorecorder.cpp
@@ -124,6 +124,12 @@ static QVariant boxValue(const QComboBox *box)
 
 void AudioRecorder::toggleRecord()
 {
+    if (!m_audioRecorder) {
+        ui->statusbar->showMessage(QStringLiteral("AudioRecorder not set. "
+                                                  "Microphone permission was not granted!"));
+        return;
+    }
+
     if (m_audioRecorder->recorderState() == QMediaRecorder::StoppedState) {
         m_captureSession.audioInput()->setDevice(
                 boxValue(ui->audioDeviceBox).value<QAudioDevice>());
@@ -153,6 +159,12 @@ void AudioRecorder::togglePause()
 
 void AudioRecorder::setOutputLocation()
 {
+    if (!m_audioRecorder) {
+        ui->statusbar->showMessage(QStringLiteral("AudioRecorder not set. "
+                                                  "Microphone permission was not granted!"));
+        return;
+    }
+
 #ifdef Q_OS_ANDROID
     QString fileName = QFileDialog::getSaveFileName(
             this, tr("Save Recording"),
